Fix wrong align logo on Tablets

--- a/source/tpl_t3_bs3_blank/less/style.less
+++ b/source/tpl_t3_bs3_blank/less/style.less
@@ -32,7 +32,7 @@
   text-align: center;
 
   // Left align the logo on  Tablets / Desktop
-  @media screen and (min-width: @screen-sm-max) {
+  @media screen and (min-width: @screen-sm) {
     text-align: left;
   }
 
